--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/cairo_icone"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/cairo_icone"
+        android:roundIcon="@mipmap/cairo_icone"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
